--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "react-tap-event-plugin": "^2.0.1",
     "recompose": "^0.22.0",
     "redux": "^3.6.0",
+    "redux-action-buffer": "^1.0.1",
     "redux-form": "^6.5.0",
     "redux-form-material-ui": "^4.1.2",
+    "redux-immutable-state-invariant": "^2.0.0",
+    "redux-persist": "^4.5.0",
+    "redux-persist-migrate": "^4.0.1",
+    "redux-reset": "^0.3.0",
     "reduxsauce": "^0.4.1",
     "reselect": "^2.5.4",
     "seamless-immutable": "^7.1.1",
